# pr-pulse

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  action.yml  entrypoint.sh  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml  test-action.yml
src/pr_pulse/: __init__.py  config.py  constants.py  main.py  utils.py
src/pr_pulse/cli/: __init__.py
src/pr_pulse/cli/commands/: analyze.py  get.py  share.py
src/pr_pulse/commands/: analyze.py  genai.py  get.py  gh.py  share.py  slack.py
src/pr_pulse/core/: chains.py  clients.py  fio.py  github.py  io.py  slack.py
src/pr_pulse/core/github/: models.py  repository.py
