[project]
name = "pr-pulse"
version = "0.1.0"
description = "generate weekly reports of all code changes in a github repository"
readme = "README.md"
authors = [
    { name = "Ajinkya Indulkar", email = "26824103+ajndkr@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "google-genai>=1.9.0",
    "pygithub>=2.6.1",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "slack-sdk>=3.35.0",
    "typer-slim>=0.15.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=9.0.2",
    "pre-commit>=4.2.0",
]

[project.scripts]
pr-pulse = "pr_pulse.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
